--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "@commercetools/platform-sdk": "^7.4.0",
-    "@commercetools/sdk-client-v2": "^2.3.0",
+    "@commercetools/ts-client": "^3.2.0",
     "dotenv": "^16.4.5"
   },
   "devDependencies": {
